--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express": "^4.14.1",
     "socket.io": "^1.7.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "ip": "^1.1.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
