--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "angular": "^1.6.2",
     "angular-route": "^1.6.2",
     "angular-socket-io": "^0.7.0",
-    "express": "^4.14.1",
-    "mobile-angular-ui": "^1.3.4",
-    "socket.io": "^1.7.3",
-    "socket.io-client": "^1.7.3",
-    "socketio-wildcard": "^0.3.0"
+    "express": "^4.14.1"
   },
   "devDependencies": {
     "ip": "^1.1.4"
